package com.websmithing.gpstracker2.ui

object UiTestTags {
    const val HOME_SETTINGS_BUTTON = "home_settings_button"
    const val SETTINGS_CLOSE_BUTTON = "settings_close_button"
    const val SETTINGS_SAVE_BUTTON = "settings_save_button"
    const val SETTINGS_LANGUAGE_RU = "settings_language_ru"
    const val SETTINGS_LANGUAGE_EN = "settings_language_en"
    const val TRACKING_BUTTON_PLAY = "tracking_button_play"
    const val TRACKING_BUTTON_STOP = "tracking_button_stop"
    const val TRACKING_BUTTON_PAUSE = "tracking_button_pause"
}
